--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-vector-icons": "^10.0.2",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
